# rgp-neural-architectures

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  environment.yml  pyproject.toml  reproduce.sh  requirements.txt  setup.cfg
audit/: README.md  (+8 more)
rgp_neural_architectures/: CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  pyproject.toml
rgp_neural_architectures/config/architectures/: operator_configs.yaml  rg_net.yaml
rgp_neural_architectures/config/datasets/: datasets.yaml
rgp_neural_architectures/config/experiments/: ablation_studies.yaml  baseline_comparison.yaml  finite_size_scaling.yaml  h2_depth_scaling.yaml
rgp_neural_architectures/config/telemetry/: __init__.py
rgp_neural_architectures/config/training/: deep_training.yaml  distributed_training.yaml  fast_track_training.yaml  optimizer_configs.yaml
rgp_neural_architectures/containers/: Singularity.def  singularity_build.sh
rgp_neural_architectures/experiments/h1_scale_correspondence/: analyze_correlation_decay.py  generate_figure3.py
rgp_neural_architectures/experiments/h2_depth_scaling/: __init__.py
rgp_neural_architectures/experiments/h3_multiscale_generalization/: __init__.py
rgp_neural_architectures/figures/extended_data/: run_extended_figure1.py  run_extended_figure3.py  run_extended_figure7.py
rgp_neural_architectures/figures/styles/: publication.mplstyle
rgp_neural_architectures/figures/supplementary/: generate_tableS3.py
rgp_neural_architectures/notebooks/: __init__.py  tutorial_fast_track.py
rgp_neural_architectures/scripts/: reproduce_fast_h2.sh  reproduce_tables.sh
rgp_neural_architectures/src/checkpoint/: __init__.py  checkpoint_verifier.py  distributed_checkpoint.py  metric_serializer.py
rgp_neural_architectures/src/datasets/: hierarchical_mnist.py
rgp_neural_architectures/src/orchestration/: pipeline.py
rgp_neural_architectures/src/proofs/: verification_runner.py
rgp_neural_architectures/src/provenance/: checksum_registry.py
rgp_neural_architectures/src/rg_flow/: __init__.py
rgp_neural_architectures/src/scaling/: data_collapse.py
rgp_neural_architectures/src/training/: __init__.py  batch_sampler.py  distributed_trainer.py  gradient_checkpoint_trainer.py  warmup_trainer.py
rgp_neural_architectures/src/utils/: __init__.py  bit_exact_verifier.py  determinism_auditor.py  fast_track_validator.py  memory_utils.py  provenance.py  telemetry_logger.py
rgp_neural_architectures/tests/ablation/: test_baseline_comparison.py  test_wavelet_operator_ablation.py
rgp_neural_architectures/tests/integration/: test_checkpoint_save_load.py  test_distributed_training.py  (+1 more)
(+634 files in other folders)
