[metadata]
name = rgp-neural-architectures
version = 1.0.0
description = Renormalization-Group Principles for Deep Neural Architectures
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.9, <3.13
keywords = deep-learning, renormalization-group, fisher-information, neural-networks

[options]
packages = find:
package_dir = = .
include_package_data = True

[options.packages.find]
where = .
include = src*, figures*, experiments*

[tool:pytest]
testpaths = tests
timeout = 300
addopts = --tb=short -q

[flake8]
max-line-length = 100
ignore = E501, W503, E203
exclude = __pycache__, .git, *.egg-info

[isort]
profile = black
line_length = 100

[mypy]
python_version = 3.9
ignore_missing_imports = True
warn_return_any = False
