[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rgp-neural-architectures"
version = "1.0.0"
description = "Renormalization-Group Principles for Deep Neural Architectures"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.12"
keywords = ["deep-learning", "renormalization-group", "fisher-information", "neural-networks"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.1",
    "numpy>=1.24.3",
    "scipy>=1.11.1",
    "sympy>=1.12",
    "matplotlib>=3.7.2",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.1",
    "h5py>=3.9.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.1",
]
tracking = [
    "tensorboard>=2.13.0",
    "wandb>=0.15.8",
    "mlflow>=2.6.0",
]
notebooks = [
    "jupyterlab>=4.0.5",
    "ipywidgets>=8.1.0",
]
all = ["rgp-neural-architectures[dev,tracking,notebooks]"]

[project.scripts]
rgp-reproduce = "scripts.reproduce:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "figures*", "experiments*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
addopts = "--tb=short -q"
